--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -33,11 +33,11 @@
 </head>
 
 <body id="page-top">
-
+  <% result.forEach((val) => { %>
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Jerry</a>
+      <a class="navbar-brand js-scroll" href="#page-top"><%= val.nick_name %></a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -75,14 +75,13 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">My Personal Blog</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Jerry</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items"><%= val.nick_name %></span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
     </div>
   </div>
   <!--/ Intro Skew End /-->
-
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -93,16 +92,16 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="/img/jerry.jpg" class="img-fluid rounded b-shadow-a border border-success" alt="">
+                      <img src="/uploads/<%= val.avarta %>" class="img-fluid rounded b-shadow-a border border-success" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Chen Sovanminea</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                      <p><span class="title-s">Status: </span> <span>Single</span></p>
-                      <p><span class="title-s">Email: </span> <span>sovanminea.chen@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(086) 993-947</span></p>
+                      <p><span class="title-s">Name: </span> <span><%= val.fullname %></span></p>
+                      <p><span class="title-s">Profile: </span> <span><%= val.nick_name %></span></p>
+                      <p><span class="title-s">Status: </span> <span><%= val.status %></span></p>
+                      <p><span class="title-s">Email: </span> <span><%= val.email %></span></p>
+                      <p><span class="title-s">Phone: </span> <span><%= val.phone %></span></p>
                     </div>
                   </div>
                 </div>
@@ -608,7 +607,7 @@
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <div id="preloader"></div>
-
+  <% }) %>
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
